cargo_error.txt
cargo :     Checking utaularia v0.1.0 (
C:\Users\administrador\Documents\GitHub
\UTAULARIA)
At line:1 char:1
+ cargo check 2>&1 | Out-File 
-FilePath "cargo_error.txt" -Encoding 
asc ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpeci 
   fied: (    Checking ut...tHub\UTAU  
  LARIA):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCo 
   mmandError
 
warning: use of deprecated associated 
function `eframe::egui::Frame::none`: 
Use `Frame::NONE` or `Frame::new()` 
instead.
   --> src\app.rs:105:33
    |
105 |             .frame(egui::Frame::n
one().fill(ctx.style().visuals.panel_fi
ll)) // Estilo limpo
    |                                 
^^^^
    |
    = note: `#[warn(deprecated)]` on 
by default

error[E0308]: arguments to this 
function are incorrect
   --> src\app.rs:128:25
    |
128 |                 
.margin(egui::Margin::symmetric(15.0, 
10.0));
    |                         
^^^^^^^^^^^^^^^^^^^^^^^ ----  ---- 
expected `i8`, found floating-point 
number
    |                                  
               |
    |                                  
               expected `i8`, found 
floating-point number
    |
note: associated function defined here
   --> C:\Users\administrador\.cargo\re
gistry\src\index.crates.io-1949cf8c6b5b
557f\epaint-0.31.1\src\margin.rs:44:18
    |
 44 |     pub const fn symmetric(x: 
i8, y: i8) -> Self {
    |                  ^^^^^^^^^

warning: use of deprecated associated 
function `eframe::egui::Frame::none`: 
Use `Frame::NONE` or `Frame::new()` 
instead.
   --> src\app.rs:130:26
    |
130 |             egui::Frame::none()
    |                          ^^^^

warning: use of deprecated associated 
function `eframe::egui::Frame::none`: 
Use `Frame::NONE` or `Frame::new()` 
instead.
   --> src\app.rs:165:37
    |
165 |         let response = 
egui::Frame::none()
    |                                  
   ^^^^

error[E0061]: this method takes 4 
arguments but 3 arguments were supplied
   --> src\app.rs:209:26
    |
209 |             ui.painter().rect_str
oke(response.rect, 15.0, (2.0, 
egui::Color32::from_rgb(0, 150, 255)));
    |                          ^^^^^^^^
^^^------------------------------------
------------------------------ 
argument #4 of type `StrokeKind` is 
missing
    |
note: method defined here
   --> C:\Users\administrador\.cargo\re
gistry\src\index.crates.io-1949cf8c6b5b
557f\egui-0.31.1\src\painter.rs:438:12
    |
438 |     pub fn rect_stroke(
    |            ^^^^^^^^^^^
help: provide the argument
    |
209 |             ui.painter().rect_str
oke(response.rect, 15.0, (2.0, 
egui::Color32::from_rgb(0, 150, 255)), 
/* StrokeKind */);
    |                                  
                                       
                             
++++++++++++++++++

error[E0433]: failed to resolve: use 
of unresolved module or unlinked crate 
`webbrowser`
   --> src\app.rs:263:37
    |
263 | ...                   let _ = 
webbrowser::open(&vb.download_link);
    |                               
^^^^^^^^^^ use of unresolved module or 
unlinked crate `webbrowser`
    |
    = help: if you wanted to use a 
crate named `webbrowser`, use `cargo 
add webbrowser` to add it to your 
`Cargo.toml`

Some errors have detailed 
explanations: E0061, E0308, E0433.
For more information about an error, 
try `rustc --explain E0061`.
warning: `utaularia` (bin "utaularia") 
generated 3 warnings
error: could not compile `utaularia` 
(bin "utaularia") due to 3 previous 
errors; 3 warnings emitted
